Resolved an issue where the background color for <p> elements was not showing correctly.  Resolved issue where text for fourth was green.  The background color is supposed to be green instead.

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,8 +1,4 @@
-odd {
-    font-family: Verdana, "DejaVu Sans", sans-serif;
-}
-
-three {
+.three {
     font-size: 24px;
 }
 
@@ -12,8 +8,12 @@ three {
 }
 
 #four {
-    color: lightgreen;
+    background-color: lightgreen;
     font-size: 24px;
     font-weight: bold;
 }
 
+.odd {
+    background-color: pink;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
+}
